# stock-report

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  EXECPLAN_TEMPLATE.md  PLANS.md
app/batch/: .gitignore  README.md  pyproject.toml
app/batch/src/batch/: main.py
app/batch/src/shared/config/: __init__.py
app/batch/src/shared/database/: __init__.py
app/batch/src/shared/logging/: __init__.py
app/batch/tests/: test_batch_main.py
app/batch/tests/jobs/market_index_daily_price/: test_market_index_daily_price_repository.py  test_market_index_daily_price_runner.py  test_market_index_daily_price_service.py  test_market_index_finance_data_reader_client.py
app/batch/tests/jobs/stock_daily_price/: test_finance_data_reader_client.py  test_stock_daily_price_repository.py  test_stock_daily_price_runner.py  test_stock_daily_price_service.py
client/: README.md  index.html  (+2 more)
worker/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
worker/scheduler/: supercronic.cron
worker/src/stock_report_worker/: __init__.py  __main__.py  cli.py  config.py  db.py
worker/src/stock_report_worker/jobs/: __init__.py  daily_report.py  locks.py  report_publisher.py  retry_policy.py  stock_runner.py  target_stocks.py  timeout.py  trading_calendar.py
worker/src/stock_report_worker/krx/: __init__.py  listing_client.py  normalization.py
worker/src/stock_report_worker/repositories/: __init__.py  batch_runs.py  processing_status.py  schema.py  stocks.py
worker/tests/: test_cli.py  test_daily_report_job.py  test_krx_stock_listing.py  test_target_stocks.py
(+139 files in other folders)
