[project]
name = "stock-report-worker"
version = "0.1.0"
description = "Python worker package for Stock Reports Lab."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_report_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
